tests/checker/ok/result_newtype_family_impls.can
Greeting = String

Name = String

Shown = String

Greeting => Shown {
    "HELLO!"
}

Name => Shown {
    "Alice"
}

Unit => Program {
    Greeting("hi")
        -> Shown
        -> Print
    Name("Alice")
        -> Shown
        -> Print
}
