tests/checker/fail/verb_named_declaration.can
Frobnicated = (Int) => Int {
    Int -> Sum(1)
}

Unit => Program {
    1
        -> Frobnicated
        -> String
        -> Print
}
